--- a/lang/en.yml
+++ b/lang/en.yml
@@ -8,3 +8,5 @@ en:
   WSE\Opauth\OpauthController:
     TITLE: 'Social login'
     PROFILECOMPLETIONTITLE: 'Complete your profile to register'
+  WSE\Opauth\OpauthRegisterForm:
+    COMPLETE: 'Complete'
