--- a/lang/en_GB.yml
+++ b/lang/en_GB.yml
@@ -8,3 +8,5 @@ en_GB:
   WSE\Opauth\OpauthController:
     TITLE: 'Social login'
     PROFILECOMPLETIONTITLE: 'Complete your profile to register'
+  WSE\Opauth\OpauthRegisterForm:
+    COMPLETE: 'Complete'
